--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,10 @@
   "orientation": "portrait",
   "description": "A social platform for Cape Verde.",
   "icons": [
-    { "src": "icons/icon-72x72.png", "sizes": "72x72", "type": "image/png" },
-    { "src": "icons/icon-96x96.png", "sizes": "96x96", "type": "image/png" },
-    { "src": "icons/icon-144x144.png", "sizes": "144x144", "type": "image/png" },
-    { "src": "icons/icon-192x192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icons/icon-512x512.png", "sizes": "512x512", "type": "image/png" }
+    { "src": "icon.png", "sizes": "72x72", "type": "image/png" },
+    { "src": "icon.png", "sizes": "96x96", "type": "image/png" },
+    { "src": "icon.png", "sizes": "144x144", "type": "image/png" },
+    { "src": "icon.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
